# Ai-fitness-couch

./: .env  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app.py  deploy_to_hf.py  docker-compose.yml  inference.py  openenv.yaml  packages.txt  pyproject.toml  requirements.txt  requirements_hf.txt  run.bat  run.sh  validate-submission.sh  your
